--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav id="nav-bar">
         <ul>
         <li nav-link><a href=#camiseta>Tienda</a></li>
-        <li nav-link><a href=#Lanza>Lanzamiento</a></li>
+        <li nav-link><a href=#lanzamiento>Lanzamiento</a></li>
         <li nav-link><a href=#accesorio>Accesorios</a></li>
         </ul>
       </nav>
@@ -55,7 +55,7 @@
 
   </section>
 
-  <section class="lanzamiento" id="lanza">
+  <section class="lanzamiento" id="lanzamiento">
 
 <h2 class="lanzamiento-video">Lanzamiento</h2>
 <br><br>
